--- a/.drone.yml
+++ b/.drone.yml
@@ -5,10 +5,10 @@ name: deploy-personal-website
 steps:
   - name: build svelte docker image
     commands:
-      - docker build -t my-svelte-app .
+      - docker build -t svelte-app .
 
   - name: restart svelte container
     commands:
-      - docker stop my-svelte-app || true
-      - docker rm my-svelte-app || true
-      - docker run -d --name my-svelte-app -p 3000:3000 my-svelte-app
+      - docker stop svelte-app || true
+      - docker rm svelte-app || true
+      - docker run -d --name svelte-app -p 3000:3000 svelte-app
